# ParallelProg

./: README.md
lab1/: CMakeLists_par.txt  CMakeLists_seq.txt  experiment_complexity_results.csv  experiment_results.csv  experiment_results_seq.csv  lab1parall.c  lab1seq.c  script_par.gnuplot  script_seq.gnuplot  Б22-505_Титов_Дмитрий_Лабараторная_1.docx
lab2/lab2 (Copy)/: lab2.drn
lab2/lab2 (Copy)/solve/: CMakeLists.txt  lab2.gnu  parall.c  performance_data.txt
lab2/lab2 (Copy)/task/: CMakeLists.txt
lab3/: CMakeLists.txt  lab3.c  lab3.drn  lab3.gnu  random_results.csv  special_results.csv
lab4/lab4/task1-7/: CMakeLists.txt  lab4task1-7.c
lab4/lab4/task8/: CMakeLists.txt  lab4task8.c  performance_dynamic_chunk_10.txt  performance_dynamic_chunk_25.txt  performance_dynamic_chunk_5.txt  performance_dynamic_chunk_50.txt  performance_guided_chunk_10.txt  performance_guided_chunk_25.txt  performance_guided_chunk_5.txt  performance_guided_chunk_50.txt  performance_static_chunk_10.txt  performance_static_chunk_25.txt  performance_static_chunk_5.txt  performance_static_chunk_50.txt  plot_performance.gnuplot
lab5/solve/: CMakeLists.txt  lab5_mpi.c  lab5_omp.c  mpi_results.csv  mpi_results_with_speedup.csv  omp_results.csv  plot.gnuplot
lab5/task/: CMakeLists.txt  lab5MPI.c  lab5OMP.c
lab6/lab6/: CMakeLists.txt  lab6mpi.c  lab6omp.c  mpi_results.csv  mpi_results_with_speedup.csv  omp_results.csv  plot.gnuplot
